--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="card">
     <div class="p1">
     <h1 class="mainhead"> Todolist</h1>
     <p class="l1">Each day I will accomplish one thing on my todo</p>
@@ -19,4 +20,5 @@
     <button class="l5">Start</button>
     <p class="l6">Don't skip introduction</p>
     </div>
-</body
+    </div>
+</body>
